force-app/main/default/objects/lwc_Calculator_History__c/lwc_Calculator_History__c.object-meta.xml
<CustomObject>
    <description>Object holding the history for the LWC calculator</description>
    <label>LWC Calculator History</label>
    <nameField>
        <displayFormat>HIS-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LWC Calculator History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>