force-app/main/default/objects/lwc_Calculator_History__c/fields/Number_A__c.field-meta.xml
<CustomField>
    <fullName>Number_A__c</fullName>
    <description>The first number of the calculator</description>
    <label>Number A</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>