force-app/main/default/objects/lwc_Calculator_History__c/fields/Number_B__c.field-meta.xml
<CustomField>
    <fullName>Number_B__c</fullName>
    <description>The second number in the LWC calculator</description>
    <label>Number B</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>