force-app/main/default/objects/lwc_Calculator_History__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
                <default>true</default>
                <label>ADD</label>
            </value>
            <value>
                <fullName>SUBTRACT</fullName>
            </value>
            <value>
                <fullName>MULTIPLY</fullName>
            </value>
            <value>
                <fullName>DEVIDE</fullName>
            </value>
            <value>
                <fullName>MODULUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>