force-app/main/default/objects/lwc_Calculator_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_A__c</columns>
    <columns>Operator__c</columns>
    <columns>Number_B__c</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>